# platform

./: .env.compose.template  .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.docker.template  .env.template  .gitignore  Dockerfile  README.md  check.sh  manage.py  openapi.yaml  pyproject.toml
backend/api/v1/: auth.py  router.py  schemas.py
backend/api/v1/check_auth/: apps.py  views.py
backend/api/v1/product/: apps.py  schemas.py  tests.py  views.py
backend/api/v1/shopping_cart/: apps.py  schemas.py  views.py
backend/apps/product/: admin.py  apps.py  models.py  signals.py  validators.py
backend/apps/product/log/: admin.py  apps.py  models.py
backend/apps/product/log/migrations/: 0001_initial.py
backend/apps/product/migrations/: 0001_initial.py  0002_product_timestamp.py
backend/apps/shopping_cart/: admin.py  apps.py  models.py
backend/apps/shopping_cart/migrations/: 0001_initial.py  0002_shoppingcartproduct_timestamp.py
backend/config/: asgi.py  handlers.py  settings.py  urls.py  wsgi.py
backend/config/notifiers/: telegram.py
backend/core/api/: urls.py
backend/core/api/v1/: auth.py  handlers.py  router.py
backend/core/api/v1/check_auth/: apps.py  schemas.py  views.py
backend/core/api/v1/health/: apps.py  views.py
backend/core/api/v1/product/: apps.py  schemas.py  tests.py  views.py
backend/core/api/v1/shopping_cart/: apps.py  schemas.py  views.py
backend/core/product/: admin.py  apps.py  models.py  search.py  signals.py
backend/core/product/log/: admin.py  apps.py  models.py
backend/core/product/log/migrations/: 0001_initial.py  0002_productlog_quantity_change.py  0003_remove_productlog_product_productlog_product_id.py  0004_alter_productlog_timestamp.py
backend/core/product/migrations/: 0001_initial.py
backend/core/shopping_cart/: admin.py  apps.py  models.py
backend/core/shopping_cart/migrations/: 0001_initial.py  0002_alter_shoppingcartproduct_quantity_and_more.py
backend/project/: manage.py
backend/project/api/: auth.py  handlers.py  router.py  urls.py
backend/project/api/health/: apps.py  schemas.py  urls.py  views.py
backend/project/api/product/: admin.py  apps.py  models.py  schemas.py  validators.py  views.py
backend/project/api/product/migrations/: 0001_initial.py  0002_alter_product_allergens_alter_product_notes_and_more.py
backend/project/project/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: build_staticfiles
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  components.json  eslint.config.js  index.html  package.json  tailwind.config.js
frontend/nginx/: nginx.conf
(+125 files in other folders)
