[project]
name = "fridgeflow-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django-ninja>=1.3.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = ["D", "ANN", "ARG"]

[tool.ruff.format]
quote-style = "double"
